Version 3.0.5 (2022-06-17):
  - Safe copy construction for meshes:
    After removal of copy/move constructors/assignments in 3.0.3, after
    we discovered dangerous bugs in property handling, this release
    re-introduces a simpler mesh copy constructor that only clones persistent
    properties.

Version 3.0.4 (2022-06-16):
  Improvements contributed by Hendrik Brückler of UOS:
  - Support for self-adjacent cells (i.e., cells that contain both halffaces of a face),
      where we had inconsistent behaviour previously:
    - adjacent_halfface_in_cell() now considers halfedge direction (if relevant)
    - reorder_incident_halffaces() now calls the above with correct halfedge orientation
  - Fix a bug in Hex mesh adjacent_halfface_on_sheet

Version 3.0.3 (2022-06-13):
  - Hotfix: disable mesh assignment operators for now, they are currently broken
            and can leave properties in bad states.
            cf. gitlab issue #34.

Version 3.0.2 (2022-02-17)
  - Handle::is_valid(): treat all negative indices as invalid, not just -1. Bug discovered by Heng Liu.

Version 3.0.1 (2022-02-12)
  - Fix `swap_vertex_indices` for two vertices connected by an edge (before, the edge was unchanged). Bug discovered by Denis Kalmykov.

Version 3.0 (2022-02-11)
  - Minimum C++ version is now 17 instead of 11
  - Property system redesign:
    - Properties can be shared or private (in addition to being 'persistent'):
        - private properties are "invisible", i.e. request_*_prop etc do not find it (e.g. create a second property)!
        - persistent properties must always be shared
        - private properties can be created on const meshes: create_private_property()
        - `set_shared()` can switch a property between shared and private
        - `set_persistent()` can switch a property between shared and persistant
    - Property Handles were abolished, they were never fully implemented
    - Removed size_of, element_size etc.