@@ -1,4 +1,5 @@
 SET(SOURCE_FILES
+    unittests_attribs.cc
     unittests_basics.cc
     unittests_files.cc
     unittests_common.cc
