@@ -1,9 +1,14 @@
+Version ??? (???):
+  - Add basic tests for attributes, make InterfaceAttrib assignable as well.
+
 Version 3.0.5 (2022-06-17):
   - Safe copy construction for meshes:
     After removal of copy/move constructors/assignments in 3.0.3, after
     we discovered dangerous bugs in property handling, this release
     re-introduces a simpler mesh copy constructor that only clones persistent
     properties.
+  - Make the properties used in OpenFlipper assignable by using a pointer
+    instead of references to the mesh
 
 Version 3.0.4 (2022-06-16):
   Improvements contributed by Hendrik Brückler of UOS:
